Adicionado cancelamento de adição de jogador

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo do dado</title>
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="./styles.css" />
     <script src="./script.js" defer></script>
     <link rel="icon" href="./images/dado-3.svg" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <h1 class="txt">Jogo do dado</h1>
@@ -18,7 +20,9 @@
 
     <main>
         <div id="gameboard">
-            <div>Jogadores</div><div>Pontuação</div><div>Total</div>
+            <div>Jogadores</div>
+            <div>Pontuação</div>
+            <div>Total</div>
 
             <div>
                 Romão
@@ -31,12 +35,14 @@
             <div>
                 4
             </div>
-        
+
             <div id="add-player-row">
-                <input type="text" style="display: none;" placeholder="Nome do jogador"/>
+                <input type="text" style="display: none;" placeholder="Nome do jogador" />
+                <button type="button">X</button>
                 <button type="button">+</button>
             </div>
         </div>
     </main>
 </body>
+
 </html>
