Implementação das funções para adcionar/remover jogador

--- a/index.html
+++ b/index.html
@@ -24,21 +24,9 @@
             <div>Pontuação</div>
             <div>Total</div>
 
-            <div>
-                Romão
-            </div>
-            <div>
-                <button type="button">x</button>
-                <button type="button">x</button>
-                <button type="button">x</button>
-            </div>
-            <div>
-                4
-            </div>
-
             <div id="add-player-row">
                 <input type="text" style="display: none;" placeholder="Nome do jogador" />
-                <button type="button">X</button>
+                <button type="button" style="display: none;">X</button>
                 <button type="button">+</button>
             </div>
         </div>
