feat: adicionado botão para conferir o resultado

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                 <h2>O jogo foi salvo no histórico.</h2>
             </div>
         </div>
+        <button type="button" id="check-results-button" onclick="event.target.parentNode.style='opacity:0;'">Conferir
+            resultado</button>
     </div>
 </body>
 
