feat: adicionado novo toast

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-version="1">
+<html lang="pt-BR" data-version="2">
 
 <head>
     <meta charset="UTF-8">
@@ -80,6 +80,9 @@
         <button type="button" id="check-results-button" onclick="event.target.parentNode.style='opacity:0;'">Conferir
             resultado</button>
     </div>
+
+    <div id="version"></div>
+    <div id="toast-area"></div>
 </body>
 
 </html>
